--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Vickytu.GitHub.io</h1>
+        <h1>Vicky Tu</h1>
         <p></p>
 
 
@@ -24,9 +24,11 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yale University c/o 2016, B.S. Math and Computer Science.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Junior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon hosted at Yale School of Management, and Y-Hack, a 36-hour hackathon with over 1000 hackers hosted at Yale-West Campus. I am also Director of Public Relations and Associate Programmer for Crayon Box Labs, an independent software group. This semester I work as a Teaching Assistant for CS 112 Introduction to Programming.
+
+I enjoy spending my free time with other members of UCW, my Christian fellowship, and expanding my skill set (i.e. baking, programming, etc).</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
