--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yale University c/o 2016, B.S. Math and Computer Science.</h3>
 
-<p>Junior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon hosted at Yale School of Management, and Y-Hack, a 36-hour hackathon with over 1000 hackers hosted at Yale-West Campus. I am also Director of Public Relations and Associate Programmer for Crayon Box Labs, an independent software group. This semester I work as a Teaching Assistant for CS 112 Introduction to Programming.
-
-I enjoy spending my free time with other members of UCW, my Christian fellowship, and expanding my skill set (i.e. baking, programming, etc).</p>
+<p>Junior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon hosted at Yale School of Management, and Y-Hack, a 36-hour hackathon with over 1000 hackers hosted at Yale-West Campus. I am also Director of Public Relations and Associate Programmer for Crayon Box Labs, an independent software group. This semester I work as a Teaching Assistant for CS 112 Introduction to Programming. I enjoy spending my free time with other members of UCW, my Christian fellowship, and expanding my skill set (i.e. baking, programming, etc).</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
