--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yale University c/o 2016, B.S. Math and Computer Science.</h3>
 
-<p>Senior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon, and Y-Hack, a 36-hour hackathon with over 1000 hackers. This summer I work as a Cloud Administrator Intern for the Yale CS Cloud Project.
-
-I enjoy spending my free time with other members of UCW, my Christian fellowship, and expanding my skill set (i.e. baking, programming, etc).</p>
+<p>Senior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon, and Y-Hack, a 36-hour hackathon with over 1000 hackers. This summer I work as a Cloud Administrator Intern for the Yale CS Cloud Project. In my free time, I enjoy spending my free time with other members of UCW, my Christian fellowship, and expanding my skill set (i.e. baking, programming, etc).</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -38,9 +36,9 @@ $ git checkout gh-pages
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Peer Tutor</p>
 
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
