Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Vickytu.GitHub.io by vickytu</title>
+    <title>Vicky Tu by vickytu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Vicky Tu</h1>
-        <p></p>
+        <p>Yale University c/o 2016, B.S. Math and Computer Science</p>
 
 
         <p class="view"><a href="https://github.com/vickytu">View My GitHub Profile</a></p>
@@ -24,42 +24,78 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Yale University c/o 2016, B.S. Math and Computer Science.</h3>
+<a id="welcome-to-my-page" class="anchor" href="#welcome-to-my-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My Page</h3>
 
-<p>Senior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon, and Y-Hack, a 36-hour hackathon with over 1000 hackers. This summer I work as a Cloud Administrator Intern for the Yale CS Cloud Project. In my free time, I enjoy spending my free time with other members of UCW, my Christian fellowship, and expanding my skill set (i.e. baking, programming, etc).</p>
+<p>Hello there! I am a senior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon, and Y-Hack, a 36-hour hackathon with over 1000 hackers. This summer I work as a Cloud Administrator Intern for the Yale CS Cloud Project.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>I enjoy spending my free time with other members of UCW, my Christian fellowship, and expanding my skill set (i.e. baking, programming, etc).</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
+<a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
-<p>Peer Tutor</p>
+<p>Peer Tutor
+Yale Department of Computer Science
+August 2015-Present
+Hosted 4 office hours per week to help students in CS 201 Introduction to Computer Science. </p>
+
+<p>Engineering Tour Guide
+Yale Admissions Office 
+June 2015-August 2015
+Led hour-long, in-depth tours once a week for prospective engineering students and families. Specialized knowledge in math and computer science departments.</p>
+
+<p>Buttery Manager
+Yale Summer Session
+June 2015-August 2015
+Managed 2 butteries, each open 6 days a week, 3 hours each night. Supported 20 workers by keeping butteries clean and well-stocked. Created flyers, menus, uniforms, and memories wall. Innovated and advertised weekly specials.</p>
+
+<p>Cloud Administration Intern
+Yale CS Cloud Project
+June 2015-August 2015
+Helped maintain server room aesthetics. Installed Linux-based operating systems across 13 servers and 1 workstation. Worked with Foreman, Puppet, FreeIPA, OpenVPN, etc to set up a network of computers for Department of Computer Science to use for research.</p>
+
+<p>Peer Tutor
+Yale Department of Computer Science
+January 2015-May 2015
+Hosted 4 office hours per week to help students in CS 112 Introduction to Programming. Monitored Piazza, a platform for students to post questions.</p>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="organizations" class="anchor" href="#organizations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Organizations</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Director of Sponsorship
+YHack
+March 2014-Present
+Planning third annual Y-Hack, Yale’s international collegiate hackathon, through contacting and securing sponsors for the event. Raised over 70k in sponsorships for second annual Y-Hack.</p>
+
+<p>President
+Yale Math Undergraduate Society
+April 2013-September 2014
+Hosted socials in order to bridge gap between Yale undergraduate students and graduate students. Planned math talks with professors and graduate students for undergraduates.</p>
+
+<p>Director of Public Relations
+Concordia Flute Ensemble
+April 2013-May 2014
+Founding officer of Yale’s undergraduate flute choir. Managed group’s Facebook, Gmail, Twitter, website, and publicity material.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Find me on <a href="https://www.linkedin.com/in/vickytu">LinkedIn</a>, follow me on , and check out my work at <a href="https://github.com/vickytu">Github</a>.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-50779945-3");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
