--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h3>
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
-<p>Peer Tutor
+<p>Peer Tutor<br>
 Yale Department of Computer Science
 August 2015-Present
 Hosted 4 office hours per week to help students in CS 201 Introduction to Computer Science. </p>
@@ -79,7 +79,7 @@ Founding officer of Yale’s undergraduate flute choir. Managed group’s Facebo
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>Find me on <a href="https://www.linkedin.com/in/vickytu">LinkedIn</a>, follow me on , and check out my work at <a href="https://github.com/vickytu">Github</a>.</p>
+<p>Find me on <a href="https://www.linkedin.com/in/vickytu">LinkedIn</a>, follow me on <a href="<a href="https://twitter.com/vickytu2">Twitter</a>, and check out my work at <a href="https://github.com/vickytu">Github</a>.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
