--- a/index.html
+++ b/index.html
@@ -34,52 +34,52 @@
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
 <p>Peer Tutor<br>
-Yale Department of Computer Science
-August 2015-Present
+Yale Department of Computer Science<br>
+August 2015-Present<br>
 Hosted 4 office hours per week to help students in CS 201 Introduction to Computer Science. </p>
 
-<p>Engineering Tour Guide
-Yale Admissions Office 
-June 2015-August 2015
+<p>Engineering Tour Guide<br>
+Yale Admissions Office<br>
+June 2015-August 2015<br>
 Led hour-long, in-depth tours once a week for prospective engineering students and families. Specialized knowledge in math and computer science departments.</p>
 
-<p>Buttery Manager
-Yale Summer Session
-June 2015-August 2015
+<p>Buttery Manager<br>
+Yale Summer Session<br>
+June 2015-August 2015<br>
 Managed 2 butteries, each open 6 days a week, 3 hours each night. Supported 20 workers by keeping butteries clean and well-stocked. Created flyers, menus, uniforms, and memories wall. Innovated and advertised weekly specials.</p>
 
-<p>Cloud Administration Intern
-Yale CS Cloud Project
-June 2015-August 2015
+<p>Cloud Administration Intern<br>
+Yale CS Cloud Project<br>
+June 2015-August 2015<br>
 Helped maintain server room aesthetics. Installed Linux-based operating systems across 13 servers and 1 workstation. Worked with Foreman, Puppet, FreeIPA, OpenVPN, etc to set up a network of computers for Department of Computer Science to use for research.</p>
 
-<p>Peer Tutor
-Yale Department of Computer Science
-January 2015-May 2015
+<p>Peer Tutor<br>
+Yale Department of Computer Science<br>
+January 2015-May 2015<br>
 Hosted 4 office hours per week to help students in CS 112 Introduction to Programming. Monitored Piazza, a platform for students to post questions.</p>
 
 <h3>
 <a id="organizations" class="anchor" href="#organizations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Organizations</h3>
 
-<p>Director of Sponsorship
-YHack
-March 2014-Present
+<p>Director of Sponsorship<br>
+YHack<br>
+March 2014-Present<br>
 Planning third annual Y-Hack, Yale’s international collegiate hackathon, through contacting and securing sponsors for the event. Raised over 70k in sponsorships for second annual Y-Hack.</p>
 
-<p>President
-Yale Math Undergraduate Society
-April 2013-September 2014
+<p>President<br>
+Yale Math Undergraduate Society<br>
+April 2013-September 2014<br>
 Hosted socials in order to bridge gap between Yale undergraduate students and graduate students. Planned math talks with professors and graduate students for undergraduates.</p>
 
-<p>Director of Public Relations
-Concordia Flute Ensemble
-April 2013-May 2014
+<p>Director of Public Relations<br>
+Concordia Flute Ensemble<br>
+April 2013-May 2014<br>
 Founding officer of Yale’s undergraduate flute choir. Managed group’s Facebook, Gmail, Twitter, website, and publicity material.</p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>Find me on <a href="https://www.linkedin.com/in/vickytu">LinkedIn</a>, follow me on <a href="<a href="https://twitter.com/vickytu2">Twitter</a>, and check out my work at <a href="https://github.com/vickytu">Github</a>.</p>
+<p>Find me on <a href="https://www.linkedin.com/in/vickytu">LinkedIn</a>, follow me on <a href="https://twitter.com/vickytu2">Twitter</a>, and check out my work at <a href="https://github.com/vickytu">Github</a>.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
