--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3>
 <a id="welcome-to-my-page" class="anchor" href="#welcome-to-my-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My Page</h3>
 
-<p>Hello there! I am a senior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon, and Y-Hack, a 36-hour hackathon with over 1000 hackers. This summer I work as a Cloud Administrator Intern for the Yale CS Cloud Project.<br></p>
+<p>Hello there! I am a senior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon, and Y-Hack, a 36-hour hackathon with over 1000 hackers. This summer I worked as a Cloud Administrator Intern for the Yale CS Cloud Project.<br></p>
 
 <p>I enjoy spending my free time with other members of UCW, my Christian fellowship, and expanding my skill set (i.e. baking, programming, etc).</p>
 
