--- a/index.html
+++ b/index.html
@@ -35,28 +35,23 @@
 
 <p>Peer Tutor<br>
 Yale Department of Computer Science<br>
-August 2015-Present<br>
-Hosted 4 office hours per week to help students in CS 201 Introduction to Computer Science. </p>
+Jan 2015-Present<br>
+Hosted 4 office hours per week  spring semester 2015 to help students in Introduction to Programming. Hosting 6 office hours per week fall semester 2015 to help students in Introduction to Computer Science.  </p>
 
 <p>Engineering Tour Guide<br>
 Yale Admissions Office<br>
 June 2015-August 2015<br>
-Led hour-long, in-depth tours once a week for prospective engineering students and families. Specialized knowledge in math and computer science departments.</p>
+Led weekly, hour-long tours explaining Yale's numerous and growing STEM offerings to prospective engineering students and families. Communicated specialized knowledge in math and computer science departments.</p>
 
 <p>Buttery Manager<br>
 Yale Summer Session<br>
 June 2015-August 2015<br>
-Managed 2 butteries, each open 6 days a week, 3 hours each night. Supported 20 workers by keeping butteries clean and well-stocked. Created flyers, menus, uniforms, and memories wall. Innovated and advertised weekly specials.</p>
+Managed 2 butteries, each open 6 days a week, 3 hours each night. Supervised 20 workers. Created flyers, menus, weekly specials, uniforms, and memory wall.</p>
 
 <p>Cloud Administration Intern<br>
 Yale CS Cloud Project<br>
 June 2015-August 2015<br>
-Helped maintain server room aesthetics. Installed Linux-based operating systems across 13 servers and 1 workstation. Worked with Foreman, Puppet, FreeIPA, OpenVPN, etc to set up a network of computers for Department of Computer Science to use for research.</p>
-
-<p>Peer Tutor<br>
-Yale Department of Computer Science<br>
-January 2015-May 2015<br>
-Hosted 4 office hours per week to help students in CS 112 Introduction to Programming. Monitored Piazza, a platform for students to post questions.</p>
+Installed Linux-based operating systems across 13 servers and 1 workstation. Worked with Foreman, Puppet, FreeIPA, OpenVPN, Bacula, and other cloud management software to set up a secure, efficient, and root-accessible cloud network for research use by Yale Department of Computer Science.</p>
 
 <h3>
 <a id="organizations" class="anchor" href="#organizations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Organizations</h3>
@@ -64,7 +59,7 @@ Hosted 4 office hours per week to help students in CS 112 Introduction to Progra
 <p>Director of Sponsorship<br>
 YHack<br>
 March 2014-Present<br>
-Planning third annual Y-Hack, Yale’s international collegiate hackathon, through contacting and securing sponsors for the event. Raised over 70k in sponsorships for second annual Y-Hack.</p>
+Planning third annual Y-Hack, Yale’s international collegiate hackathon. Contacted and secured sponsors for the event. Raised over 70k in sponsorships for Y-Hack.</p>
 
 <p>President<br>
 Yale Math Undergraduate Society<br>
