--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
         <h3>
 <a id="welcome-to-my-page" class="anchor" href="#welcome-to-my-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My Page</h3>
 
-<p>Hello there! I am a senior at Yale University pursuing a double major in Mathematics and Computer Science. As Director of Sponsorship of the Yale Undergraduate Student Hacker Organization, I reach out to companies to partner with Pawprint, a day-long 200-high schooler hackathon, and Y-Hack, a 36-hour hackathon with over 1000 hackers. This summer I worked as a Cloud Administrator Intern for the Yale CS Cloud Project.<br></p>
-
-<p>I enjoy spending my free time with other members of UCW, my Christian fellowship, and expanding my skill set (i.e. baking, programming, etc).</p>
+<p>Hello there! I recently graduated cum laude from Yale University with a Bachelor of Science in Mathematics and Computer Science (double), with distinction in Computer Science. I start work in July for Google in Mountain View, CA, as an Engineering Resident. </p>
 
 <h3>
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
 <p>Peer Tutor<br>
 Yale Department of Computer Science<br>
-Jan 2015-Present<br>
-Hosted 4 office hours per week  spring semester 2015 to help students in Introduction to Programming. Hosting 6 office hours per week fall semester 2015 to help students in Introduction to Computer Science.  </p>
+Jan 2015-Dec 2015<br>
+Hosted 4 office hours per week  spring semester 2015 to help students in Introduction to Programming. Hosted 6 office hours per week fall semester 2015 to help students in Introduction to Computer Science.  </p>
 
 <p>Engineering Tour Guide<br>
 Yale Admissions Office<br>
@@ -59,8 +57,8 @@ Installed Linux-based operating systems across 13 servers and 1 workstation. Wor
 
 <p>Director of Sponsorship<br>
 YHack<br>
-March 2014-Present<br>
-Planning third annual Y-Hack, Yale’s international collegiate hackathon. Contacted and secured sponsors for the event. Raised over 70k in sponsorships for Y-Hack.</p>
+March 2014-August 2015<br>
+Planned third annual Y-Hack, Yale’s international collegiate hackathon. Contacted and secured sponsors for the event. Raised over 70k in sponsorships for Y-Hack.</p>
 
 <p>President<br>
 Yale Math Undergraduate Society<br>
