--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
         <p class="view"><a href="https://github.com/vickytu">View My GitHub Profile</a></p>
-        <img src="portrait.jpg" alt="portrait" align="left">
+        <img src="2016photo.jpg" alt="portrait" align="left">
 
       </header>
       <section>
