--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Vicky Tu</h1>
-        <p>Yale University c/o 2016, B.S. Math and Computer Science</p>
+        <p>Software Engineer at Google</p>
 
 
         <p class="view"><a href="https://github.com/vickytu">View My GitHub Profile</a></p>
@@ -27,10 +27,15 @@
         <h3>
 <a id="welcome-to-my-page" class="anchor" href="#welcome-to-my-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My Page</h3>
 
-<p>Hello there! I recently graduated cum laude from Yale University with a Bachelor of Science in Mathematics and Computer Science (double), with distinction in Computer Science. I start work in July for Google in Mountain View, CA, as an Engineering Resident. </p>
+<p>Hello there! I currently work for Google in Mountain View, CA, as a Software Engineer. Before that, I graduated cum laude from Yale University with a Bachelor of Science in Mathematics and Computer Science (double), with distinction in Computer Science. In my free time I enjoy running, reading, and exploring the Bay Area.</p>
 
 <h3>
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
+
+<p>Software Engineer<br>
+Google<br>
+July 2016-Present<br>
+Developing a strong industry CS foundation while working on complex programming projects. </p>
 
 <p>Peer Tutor<br>
 Yale Department of Computer Science<br>
