--- a/index.html
+++ b/index.html
@@ -35,27 +35,31 @@
 <p>Software Engineer<br>
 Google<br>
 July 2016-Present<br>
-Developing a strong industry CS foundation while working on complex programming projects. </p>
+<p>Google Fiber (Sep 2016-Jan 2017)<br>
+I created a filterable interactive sunburst visualization using HTML/CSS and d3.js for product managers to monitor Google Fiber TV app usage . As the lead software engineer working with a team of quantitative analysts, I designed and implemented a FlumeJava pipeline to gather data on the people in Google Fiber cities, which will be used to model take-rate and improve up-selling.<br></p>
+
+<p>Engineering Residency Training (Jul 2016-Sep 2016)<br>
+I trained in various Google technologies while working on coding projects including a search engine for Shakespeare’s works, a simple social network, and Boggle game.<br> </p>
 
 <p>Peer Tutor<br>
 Yale Department of Computer Science<br>
 Jan 2015-Dec 2015<br>
-Hosted 4 office hours per week  spring semester 2015 to help students in Introduction to Programming. Hosted 6 office hours per week fall semester 2015 to help students in Introduction to Computer Science.  </p>
+I assisted with the introductory programming course and introductory computer science course at Yale University by conducting four hour office hours twice a week across the fall and spring semesters. I also graded assignments and worked with faculty and  other peer tutors to help answer student questions online outside of office hours.  </p>
 
 <p>Engineering Tour Guide<br>
 Yale Admissions Office<br>
 June 2015-August 2015<br>
-Led weekly, hour-long tours explaining Yale's numerous and growing STEM offerings to prospective engineering students and families. Communicated specialized knowledge in math and computer science departments.</p>
+I led weekly, hour-long tours explaining Yale's numerous and growing STEM offerings to prospective engineering students and families. I communicated specialized knowledge in math and computer science departments.</p>
 
 <p>Buttery Manager<br>
 Yale Summer Session<br>
 June 2015-August 2015<br>
-Managed 2 butteries, each open 6 days a week, 3 hours each night. Supervised 20 workers. Created flyers, menus, weekly specials, uniforms, and memory wall.</p>
+I managed 2 butteries, each open 6 days a week, 3 hours each night. I supervised 20 workers. I created flyers, menus, weekly specials, uniforms, and memory wall.</p>
 
 <p>Cloud Administration Intern<br>
 Yale CS Cloud Project<br>
 June 2015-August 2015<br>
-Installed Linux-based operating systems across 13 servers and 1 workstation. Worked with Foreman, Puppet, FreeIPA, OpenVPN, Bacula, and other cloud management software to set up a secure, efficient, and root-accessible cloud network for research use by Yale Department of Computer Science.</p>
+I set up the Yale Computer Science Department’s Cloud Network, which included installing Linux operating systems across thirteen servers and configuring Foreman, Puppet, FreeIPA, OpenVPN, Bacula, and other cloud management software.</p>
 
 <h3>
 <a id="organizations" class="anchor" href="#organizations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Organizations</h3>
