--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h3>
 <a id="welcome-to-my-page" class="anchor" href="#welcome-to-my-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My Page</h3>
 
-<p>Hello there! I currently work for Google in Mountain View, CA, as a Software Engineer. Before that, I graduated cum laude from Yale University with a Bachelor of Science in Mathematics and Computer Science (double), with distinction in Computer Science. In my free time I enjoy running, reading, and exploring the Bay Area.</p>
+<p>Hello there! I currently work for Google MTV as a Software Engineer. Before that, I graduated cum laude from Yale University with a Bachelor of Science in Mathematics and Computer Science (double), with distinction in Computer Science. In my free time I enjoy long walks and reading nonfiction.</p>
 
 <h3>
 <a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
@@ -35,6 +35,10 @@
 <p>Software Engineer<br>
 Google<br>
 July 2016-Present<br>
+  
+<p>Reserve With Google (Feb 2017-Present)<br>
+I launched the Partner Portal, the dashboard partners use to view the information they have sent to Reserve With Google. Built using Java and Javascript, the dashboard allows partners to debug issues that arise, thus saving engineering hours.<br></p>
+
 <p>Google Fiber (Sep 2016-Jan 2017)<br>
 I created a filterable interactive sunburst visualization using HTML/CSS and d3.js for product managers to monitor Google Fiber TV app usage . As the lead software engineer working with a team of quantitative analysts, I designed and implemented a FlumeJava pipeline to gather data on the people in Google Fiber cities, which will be used to model take-rate and improve up-selling.<br></p>
 
